--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
   align-items: center;
 }
 
-.main {
+main {
   height: 90vh;
   background: #fff;
   box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
@@ -24,7 +24,7 @@ body {
 
 .title-container {
   height: 90vh;
-  background: url("https://github.com/hamza-mirza/react-weather-app/blob/master/src/img/bg.jpg") center center no-repeat;
+  background: url("./bg.jpg") center center no-repeat;
   background-size: cover;
   display: flex;
   align-items: center;
